Migrate JAXB to jakarta
- change javax.* JAXB packages to jakarta.*
- bump snapshot version to 1.15.0-SNAPSHOT

Issue-ID: AAI-4005
Change-Id: I5bf2735c5ef53c9162a56f6b5f78e02992a0e2a0
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>